# fp

./: CMakeLists.txt  Optional.hpp  README.md  Writer.hpp  generic.hpp  helpers.hpp  optional.hpp  task.hpp  test.cpp  traits.hpp  writer.hpp
tests/: CMakeLists.txt  generic.cpp  optional.cpp  optional_task.cpp  task.cpp  task_optional.cpp  writer.cpp
